--- a/src/Index.html
+++ b/src/Index.html
@@ -3,39 +3,33 @@
 
 <head>
   <base target="_top">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <h1>
   <?= event.name ?>
 </h1>
 
 <body>
-  <table>
-    <? for (var i = 0; i < event.participants.length; i++) { 
-        let p = event.participants[i] 
-        ?>
+  <table class="table table-stripe">
+  <thead>
     <tr>
-      <td>
-        <? if (p.leader)  { ?>
-          <b>
-              <?= event.participants[i].first_name ?>
-          <b>
-            <? } else { ?> 
-            <?= event.participants[i].first_name ?>
-            <? } ?>
-      </td>
-      <td>
-        <? if (p.leader)  { ?>
-          <b>
-              <?= event.participants[i].last_name ?>
-          <b>
-            <? } else { ?> 
-            <?= event.participants[i].last_name ?>
-            <? } ?>
-      </td>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
     </tr>
-    <? } ?>
-  </table>
+  </thead>
+  <tbody>
+    <? for (var i = 0; i < event.participants.length; i++) { 
+        let p = event.participants[i]
+        let tr =  p.leader ? '<tr class="table-success">' : '<tr>'
+        ?>
+    <tr <?!= p.leader ? 'class="table-success"' : '' ?>>
+      <td><?= p.first_name ?></td>
+      <td><?= p.last_name ?></td>
+    </tr>
+  <? } ?>
+  </tbody>
+</table>
 </body>
 
 </html>
