--- a/src/Index.html
+++ b/src/Index.html
@@ -6,30 +6,35 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<h1>
-  <?= event.name ?>
-</h1>
+
 
 <body>
-  <table class="table table-stripe">
-  <thead>
-    <tr>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-    </tr>
-  </thead>
-  <tbody>
-    <? for (var i = 0; i < event.participants.length; i++) { 
+  <div class="container">
+    <h1><?= event.name ?></h1>
+    <table class="table table-striped table-small caption-top">
+      <caption>Leaders are highlighted</caption>
+      <thead>
+        <tr>
+          <th scope="col">First</th>
+          <th scope="col">Last</th>
+        </tr>
+      </thead>
+      <tbody>
+        <? for (var i = 0; i < event.participants.length; i++) { 
         let p = event.participants[i]
-        let tr =  p.leader ? '<tr class="table-success">' : '<tr>'
         ?>
-    <tr <?!= p.leader ? 'class="table-success"' : '' ?>>
-      <td><?= p.first_name ?></td>
-      <td><?= p.last_name ?></td>
-    </tr>
-  <? } ?>
-  </tbody>
-</table>
+        <tr <?!=p.leader ? 'class="table-success"' : '' ?>>
+          <td>
+            <?= p.first_name ?>
+          </td>
+          <td>
+            <?= p.last_name ?>
+          </td>
+        </tr>
+        <? } ?>
+      </tbody>
+    </table>
+  </div>
 </body>
 
 </html>
