--- a/src/Index.html
+++ b/src/Index.html
@@ -10,7 +10,10 @@
 
 <body>
   <div class="container">
-    <h1><?= event.name ?></h1>
+    <h1>
+      <?= event.name ?>
+    </h1>
+    <? if (event.participants.length) { ?>
     <table class="table table-striped table-small caption-top">
       <caption>Leaders are highlighted</caption>
       <thead>
@@ -34,6 +37,7 @@
         <? } ?>
       </tbody>
     </table>
+    <? } ?>
   </div>
 </body>
 
