Upgraded dates to v2.0; altered table to include useful links

--- a/src/Index.html
+++ b/src/Index.html
@@ -15,8 +15,8 @@
     </h1>
       <hr>
     <? if (event.participants.length) { ?>
-    <table class="table table-striped table-small caption-top">
-      <caption>Leaders are highlighted. <a href="https://docs.google.com/document/d/14GltSXO37x5QPol9k_K6m5D09mKHiliIdGVXxSn5NRU/edit?usp=sharing">How to Un-RSVP</a></caption>
+    <table class="table table-striped table-small caption-bottom">
+      <caption>Leaders are highlighted.</caption>
       <thead>
         <tr>
           <th scope="col">First</th>
@@ -41,6 +41,12 @@
     <? } else { ?>
       <h2>No one has RSVP'd or signed up to be a leader yet<h2>
     <? } ?>
+    <div>
+    Changed your mind? <a href="https://docs.google.com/document/d/14GltSXO37x5QPol9k_K6m5D09mKHiliIdGVXxSn5NRU/edit?usp=sharing">Reverse your RSVP</a>
+    </div>
+    <div>
+      Name not listed? <a href="https://support.ridewithgps.com/hc/en-us/articles/4419008642203-Manage-Your-Account">Set a first and last name in your RWGPS profile</a>
+    </div>
   </div>
 </body>
 
