--- a/src/Index.html
+++ b/src/Index.html
@@ -13,14 +13,13 @@
     <h1>
       <?= event.name ?>
     </h1>
-      <hr>
+    <hr>
     <? if (event.participants.length) { ?>
-    <table class="table table-striped table-small caption-bottom">
-      <caption>Leaders are highlighted.</caption>
+    <table class="table table-striped table-small caption-top">
+      <caption>Ride Leaders are highlighted.</caption>
       <thead>
         <tr>
-          <th scope="col">First</th>
-          <th scope="col">Last</th>
+          <th scope="col">Name</th>
         </tr>
       </thead>
       <tbody>
@@ -30,24 +29,27 @@
         ?>
         <tr <?!=p.leader ? 'class="table-success"' : '' ?>>
           <td>
-           <a href=<?!= h ?>><?= p.first_name ?></a>
-          </td>
-          <td>
+            <a href=<?!= h ?>>
+            <?= p.first_name ?>
             <?= p.last_name ?>
+          </a>
           </td>
         </tr>
         <? } ?>
       </tbody>
     </table>
-    <? } else { ?>
-      <h2>No one has RSVP'd or signed up to be a leader yet<h2>
-    <? } ?>
     <div>
     Changed your mind? <a href="https://docs.google.com/document/d/14GltSXO37x5QPol9k_K6m5D09mKHiliIdGVXxSn5NRU/edit?usp=sharing">Reverse your RSVP</a>
     </div>
     <div>
+      Want more privacy? <a href="https://support.ridewithgps.com/hc/en-us/articles/4431569889435">Manage your RWGPS Privacy settings</a>
+    </div>
+    <div>
       Name not listed? <a href="https://support.ridewithgps.com/hc/en-us/articles/4419008642203-Manage-Your-Account">Set a first and last name in your RWGPS profile</a>
     </div>
+    <? } else { ?>
+      <h2>No one has RSVP'd or signed up to be a leader yet</h2>
+    <? } ?>
   </div>
 </body>
 
